# ALevelDataScience

./: .gitignore  Cargo.toml  Large Data Set - Information.csv  README.md  parse_data.py
data/: Large Data Set - Beijing May-Oct 1987.csv  Large Data Set - Beijing May-Oct 2015.csv  Large Data Set - Camborne May-Oct 2015.csv  Large Data Set - Heathrow May-Oct 2015.csv  Large Data Set - Hurn May-Oct 2015.csv  Large Data Set - Jacksonville May-Oct 1987.csv  Large Data Set - Jacksonville May-Oct 2015.csv  Large Data Set - Leeming May-Oct 2015.csv  Large Data Set - Leuchars May-Oct 1987.csv  Large Data Set - Perth May-Oct 1987.csv  Large Data Set - Perth May-Oct 2015.csv
data/local/: Large Data Set - Camborne May-Oct 1987.csv  Large Data Set - Heathrow May-Oct 1987.csv  Large Data Set - Leuchars May-Oct 2015.csv
failed_attempts/diesel/: Cargo.toml
failed_attempts/diesel/src/: main.rs
failed_attempts/diesel/src/schema/: mod.rs  static_tables.rs
failed_attempts/py/: parse_data.py
src/: main.rs
src/dataset/local/: Large Data Set - Hurn May-Oct 1987.csv  Large Data Set - Leeming May-Oct 1987.csv
src/schema/: create_tables.rs  data_tables.rs  mod.rs  static_tables.rs
src/types/: mod.rs
src/utils/: degrees.rs  float_hours.rs  mod.rs  oktas.rs  percentage.rs  uf32.rs
static/styles/: styles.css
static/templates/: index.html  sayhello.html  search.html  view.html
