[package]
name = "ALevelDataScience"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
csv = "1.2.2"
diesel = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
serde = { version = "1.0.163", features = ["derive"] }
